--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -134,7 +134,7 @@
         },
         "outputId": "01523f93-bbd2-42f1-cf3e-6cbd3bf57a61"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,7 +223,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -250,7 +250,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -277,7 +277,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -304,7 +304,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -351,7 +351,7 @@
         "id": "AYjxvTUu7EMa",
         "outputId": "862ea32f-ee78-4f19-e2ea-1381746d8720"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -455,7 +455,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -480,7 +480,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -513,7 +513,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -536,7 +536,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -562,7 +562,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -600,7 +600,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,7 +654,7 @@
         },
         "outputId": "46a5e7c5-580f-48f2-a9e1-9a9686f96c59"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -713,7 +713,7 @@
           "height": 36
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -753,7 +753,7 @@
           "height": 36
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -793,7 +793,7 @@
           "height": 36
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -834,7 +834,7 @@
           "height": 36
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -877,7 +877,7 @@
           "height": 36
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -906,7 +906,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -943,7 +943,7 @@
         },
         "outputId": "592112ef-580f-47fe-dd44-f05e0e707d18"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -978,7 +978,7 @@
         },
         "id": "S4GBG8QU2BSw"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1016,7 +1016,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1040,7 +1040,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1095,7 +1095,7 @@
         },
         "outputId": "5409ce01-bdeb-439d-c51e-9cc61638e6af"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1136,7 +1136,7 @@
         },
         "id": "f5UQtkOC6Gfy"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1164,7 +1164,7 @@
           "height": 36
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1204,7 +1204,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1272,20 +1272,40 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "if 2 < 7 :\n",
+        "  print('verdadero')\n",
+        ""
+      ],
       "metadata": {
-        "id": "S2S6XAFz-czM"
+        "id": "S2S6XAFz-czM",
+        "outputId": "6960a669-f0dd-487d-8aa3-c72cdc11cd6d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "verdadero\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "if 2 > 7 :\n",
+        "  print('verdadero')\n",
+        "  print(\"fin de la consulta\")"
+      ],
       "metadata": {
         "id": "YHkwMMyY-c1r"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -1317,6 +1337,34 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "if 2 > 7 :\n",
+        "  print('verdadero')\n",
+        "else:\n",
+        "  print(\"falso\")\n",
+        "print(\"fin de la consulta\")"
+      ],
+      "metadata": {
+        "id": "jYkO0yNR7NP-",
+        "outputId": "dca59e40-d8f8-479d-f6ec-4a0de3fc1cfb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "falso\n",
+            "fin de la consulta\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
         "id": "LPOb5MkV-btq"
@@ -1338,12 +1386,35 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota = float(input('digita la nota: '))\n",
+        "if nota >= 7.0:\n",
+        "  print('aprobado')\n",
+        "else:\n",
+        "  print('reprobado')\n",
+        "print(nota)\n",
+        "print(type(nota))"
+      ],
       "metadata": {
-        "id": "UukCN4AQ-YYW"
+        "id": "UukCN4AQ-YYW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "74009c99-4631-415a-9c59-3b1975dac0d4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digita la nota: 4\n",
+            "reprobado\n",
+            "4.0\n",
+            "<class 'float'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1376,12 +1447,78 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "nota = float(input('digita la nota: '))\n",
+        "if nota >= 7.0:\n",
+        "  print('aprobado')\n",
+        "  if 7.0 > nota >= 5.0:\n",
+        "    print('recuperacion')\n",
+        "else:\n",
+        "  print('reprobado')\n",
+        "print(nota)\n",
+        "print(type(nota))"
+      ],
+      "metadata": {
+        "outputId": "cdf51118-aa0e-40a5-b8e6-829669cb318f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0VexMCwv8ysp"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digita la nota: 5\n",
+            "reprobado\n",
+            "5.0\n",
+            "<class 'float'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
         "id": "iU-pjoJt-W89"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nota = float(input('digita la nota: '))\n",
+        "if nota >= 7.0:\n",
+        "  print('aprobado')\n",
+        "else:\n",
+        "  print('reprobado')\n",
+        "print(nota)\n",
+        "print(type(nota))"
+      ],
+      "metadata": {
+        "outputId": "1394c034-15b0-410c-9810-0bed9086b30f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vSmOakmABY90"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digita la nota: 8\n",
+            "aprobado\n",
+            "8.0\n",
+            "<class 'float'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1456,12 +1593,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota = float(input('digita la nota: '))\n",
+        "if nota >= 7.0:\n",
+        "  print('aprobado')\n",
+        "elif 7.0 > nota >= 5.0:\n",
+        "  print('recuperacion')\n",
+        "else:\n",
+        "  print('reprobado')"
+      ],
       "metadata": {
-        "id": "QFamB78s-TW_"
+        "id": "QFamB78s-TW_",
+        "outputId": "118fa820-64a5-4041-e3a9-b8dcc2372bf0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digita la nota: 6.9\n",
+            "recuperacion\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1531,30 +1689,93 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "v = True\n",
+        "f = False"
+      ],
       "metadata": {
         "id": "DFKmpvmS-Pa6"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "if v and v:\n",
+        "  print('verdadero')\n",
+        "else:\n",
+        "  print('falso')"
+      ],
       "metadata": {
-        "id": "W5BIrpOD-PeI"
+        "id": "W5BIrpOD-PeI",
+        "outputId": "e6228ce0-17e9-42a0-945a-d1cfc5621466",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "verdadero\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "if v or f:\n",
+        "  print('verdadero')\n",
+        "else:\n",
+        "  print('falso')"
+      ],
       "metadata": {
-        "id": "fpDhYxq4-PiM"
+        "id": "fpDhYxq4-PiM",
+        "outputId": "1e11f127-8924-4389-f931-148670589211",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "verdadero\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if not f:\n",
+        "  print('verdadero')\n",
+        "else:\n",
+        "  print('falso')"
+      ],
+      "metadata": {
+        "id": "UDIOial8GuAb",
+        "outputId": "2063c478-8431-44b5-d346-8acef5035006",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "verdadero\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1602,7 +1823,93 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "lista = 'Juan Pérez, María González, Pedro Rodríguez, Ana López, Carlos Martínez, Laura Sánchez, José García, Elena Fernández, Luis Morales, Carmen Torres, David Ruiz, Isabel Ramírez, Javier Díaz, Sara Herrera, Miguel Castro, Patricia Ortega, Francisco Vargas, Marta Jiménez, Manuel Medina, Rosa Molina, Alejandro Silva, Silvia Ruiz, Andrés Torres, Natalia Soto, Diego Guerrero, Paula Ríos, Ricardo Navarro, Alicia Cordero, Carlos Vidal, Lorena Gómez'"
+      ],
+      "metadata": {
+        "id": "CVrsm9mAJWgb"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nombre_1 = 'Miguel Castro'\n",
+        "nombre_2 = 'Marcelo Noguera'"
+      ],
+      "metadata": {
+        "id": "WRoyx_nLHWgq"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if nombre_1 in lista:\n",
+        "  print('aprobo')\n",
+        "else:\n",
+        "  print('reprobo')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lDi6v_gLIiDL",
+        "outputId": "0fcd7d46-3d52-4498-b582-38661fe15adf"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "aprobo\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
+      "metadata": {
+        "id": "Vfe5yGXBJsaU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if nombre_2 in lista:\n",
+        "  print('aprobo')\n",
+        "else:\n",
+        "  print('reprobo')"
+      ],
+      "metadata": {
+        "outputId": "2fd2e4ea-787e-49ea-b686-70e2900c7678",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7C7ABo6cJwpe"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "reprobo\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nota ="
+      ],
       "metadata": {
         "id": "gPPN9BCT-Mki"
       },
