--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -1279,10 +1279,10 @@
       ],
       "metadata": {
         "id": "S2S6XAFz-czM",
-        "outputId": "6960a669-f0dd-487d-8aa3-c72cdc11cd6d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6960a669-f0dd-487d-8aa3-c72cdc11cd6d"
       },
       "execution_count": 1,
       "outputs": [
@@ -1345,11 +1345,11 @@
         "print(\"fin de la consulta\")"
       ],
       "metadata": {
-        "id": "jYkO0yNR7NP-",
-        "outputId": "dca59e40-d8f8-479d-f6ec-4a0de3fc1cfb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jYkO0yNR7NP-",
+        "outputId": "dca59e40-d8f8-479d-f6ec-4a0de3fc1cfb"
       },
       "execution_count": 6,
       "outputs": [
@@ -1604,10 +1604,10 @@
       ],
       "metadata": {
         "id": "QFamB78s-TW_",
-        "outputId": "118fa820-64a5-4041-e3a9-b8dcc2372bf0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "118fa820-64a5-4041-e3a9-b8dcc2372bf0"
       },
       "execution_count": 20,
       "outputs": [
@@ -1709,10 +1709,10 @@
       ],
       "metadata": {
         "id": "W5BIrpOD-PeI",
-        "outputId": "e6228ce0-17e9-42a0-945a-d1cfc5621466",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e6228ce0-17e9-42a0-945a-d1cfc5621466"
       },
       "execution_count": 23,
       "outputs": [
@@ -1735,10 +1735,10 @@
       ],
       "metadata": {
         "id": "fpDhYxq4-PiM",
-        "outputId": "1e11f127-8924-4389-f931-148670589211",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1e11f127-8924-4389-f931-148670589211"
       },
       "execution_count": 26,
       "outputs": [
@@ -1760,11 +1760,11 @@
         "  print('falso')"
       ],
       "metadata": {
-        "id": "UDIOial8GuAb",
-        "outputId": "2063c478-8431-44b5-d346-8acef5035006",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UDIOial8GuAb",
+        "outputId": "2063c478-8431-44b5-d346-8acef5035006"
       },
       "execution_count": 27,
       "outputs": [
@@ -1776,6 +1776,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "hsJsEmaRKvdi"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1956,30 +1965,102 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "nota_1 = float(input('digita la primera nota: '))\n",
+        "nota_2 = float(input('digita la segunda nota: '))\n",
+        "print(f'el promedio del estudiante 1 de las notas es: {(nota_1 + nota_2)/2}')"
+      ],
+      "metadata": {
+        "id": "xcx21IGT9qA0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "91982ca7-039a-4393-84e8-15fe8e555c6b"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digita la primera nota: 6\n",
+            "digita la segunda nota: 5\n",
+            "el promedio del estudiante 1 de las notas es: 5.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "xcx21IGT9qA0"
+        "id": "yHO6P_UZNMri"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
+      "source": [
+        "nota_1 = float(input('digita la primera nota: '))\n",
+        "nota_2 = float(input('digita la segunda nota: '))\n",
+        "print(f'el promedio del estudiante 2 de las notas es: {(nota_1 + nota_2)/2}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "41a23d90-9e21-431a-83f1-5699af59ee10",
+        "id": "8P8y8u8PNTkX"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digita la primera nota: 4\n",
+            "digita la segunda nota: 3\n",
+            "el promedio del estudiante 2 de las notas es: 3.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Wtbiy9Ay9rGJ"
+        "id": "nQHmj3IoNXO1"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota_1 = float(input('digita la primera nota: '))\n",
+        "nota_2 = float(input('digita la segunda nota: '))\n",
+        "print(f'el promedio del estudiante 3 de las notas es: {(nota_1 + nota_2)/2}')"
+      ],
       "metadata": {
-        "id": "Yfyz4anY9rIr"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fcba466c-8959-492c-e11a-f618ab0e4cad",
+        "id": "Jq4VDz0dNYFZ"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digita la primera nota: 2\n",
+            "digita la segunda nota: 6\n",
+            "el promedio del estudiante 3 de las notas es: 4.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2021,21 +2102,75 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "contador = 1\n",
+        "while contador <= 10:\n",
+        "  print(contador)\n",
+        "  contador += 1"
+      ],
       "metadata": {
-        "id": "Hd0ZSWxD9wCD"
+        "id": "Hd0ZSWxD9wCD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0ccdedf1-3fd5-483b-f7cb-85a6a9bcea40"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "contador = 1\n",
+        "while contador <= 3:\n",
+        "  nota_1 = float(input('digita la primera nota: '))\n",
+        "  nota_2 = float(input('digita la segunda nota: '))\n",
+        "  print(f'el promedio del estudiante {contador} de las notas es: {(nota_1 + nota_2)/2}')\n",
+        "  contador += 1\n",
+        ""
+      ],
       "metadata": {
-        "id": "miFHNqp29nOL"
+        "id": "miFHNqp29nOL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b101347a-d44c-4b4c-e320-c29f39fcc06f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digita la primera nota: 9\n",
+            "digita la segunda nota: 9\n",
+            "el promedio del estudiante 1 de las notas es: 9.0\n",
+            "digita la primera nota: 6\n",
+            "digita la segunda nota: 9\n",
+            "el promedio del estudiante 2 de las notas es: 7.5\n",
+            "digita la primera nota: 5\n",
+            "digita la segunda nota: 7\n",
+            "el promedio del estudiante 3 de las notas es: 6.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
