--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -147,12 +147,26 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(\"hola mundo\")\n"
+      ],
       "metadata": {
-        "id": "sivPtqSjADQV"
+        "id": "sivPtqSjADQV",
+        "outputId": "513b9f7d-e236-4cbd-addf-abb974efbdce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hola mundo\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1274,8 +1288,7 @@
       "cell_type": "code",
       "source": [
         "if 2 < 7 :\n",
-        "  print('verdadero')\n",
-        ""
+        "  print('verdadero')\n"
       ],
       "metadata": {
         "id": "S2S6XAFz-czM",
@@ -1284,7 +1297,7 @@
         },
         "outputId": "6960a669-f0dd-487d-8aa3-c72cdc11cd6d"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1305,7 +1318,7 @@
       "metadata": {
         "id": "YHkwMMyY-c1r"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1351,7 +1364,7 @@
         "id": "jYkO0yNR7NP-",
         "outputId": "dca59e40-d8f8-479d-f6ec-4a0de3fc1cfb"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1402,7 +1415,7 @@
         },
         "outputId": "74009c99-4631-415a-9c59-3b1975dac0d4"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1465,7 +1478,7 @@
         },
         "id": "0VexMCwv8ysp"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1506,7 +1519,7 @@
         },
         "id": "vSmOakmABY90"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1609,7 +1622,7 @@
         },
         "outputId": "118fa820-64a5-4041-e3a9-b8dcc2372bf0"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1696,7 +1709,7 @@
       "metadata": {
         "id": "DFKmpvmS-Pa6"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1714,7 +1727,7 @@
         },
         "outputId": "e6228ce0-17e9-42a0-945a-d1cfc5621466"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1740,7 +1753,7 @@
         },
         "outputId": "1e11f127-8924-4389-f931-148670589211"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1766,7 +1779,7 @@
         "id": "UDIOial8GuAb",
         "outputId": "2063c478-8431-44b5-d346-8acef5035006"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1838,7 +1851,7 @@
       "metadata": {
         "id": "CVrsm9mAJWgb"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1850,7 +1863,7 @@
       "metadata": {
         "id": "WRoyx_nLHWgq"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1868,7 +1881,7 @@
         "id": "lDi6v_gLIiDL",
         "outputId": "0fcd7d46-3d52-4498-b582-38661fe15adf"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1903,7 +1916,7 @@
         },
         "id": "7C7ABo6cJwpe"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1977,7 +1990,7 @@
         },
         "outputId": "91982ca7-039a-4393-84e8-15fe8e555c6b"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2013,7 +2026,7 @@
         "outputId": "41a23d90-9e21-431a-83f1-5699af59ee10",
         "id": "8P8y8u8PNTkX"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2049,7 +2062,7 @@
         "outputId": "fcba466c-8959-492c-e11a-f618ab0e4cad",
         "id": "Jq4VDz0dNYFZ"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2115,7 +2128,7 @@
         },
         "outputId": "0ccdedf1-3fd5-483b-f7cb-85a6a9bcea40"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2143,8 +2156,7 @@
         "  nota_1 = float(input('digita la primera nota: '))\n",
         "  nota_2 = float(input('digita la segunda nota: '))\n",
         "  print(f'el promedio del estudiante {contador} de las notas es: {(nota_1 + nota_2)/2}')\n",
-        "  contador += 1\n",
-        ""
+        "  contador += 1\n"
       ],
       "metadata": {
         "id": "miFHNqp29nOL",
@@ -2153,7 +2165,7 @@
         },
         "outputId": "b101347a-d44c-4b4c-e320-c29f39fcc06f"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
