Se creó con Colab

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -2282,10 +2282,10 @@
       ],
       "metadata": {
         "id": "uXIZnLSr9jOu",
-        "outputId": "773e209f-8300-4bc1-f8eb-ba4a6072eed4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "773e209f-8300-4bc1-f8eb-ba4a6072eed4"
       },
       "execution_count": 1,
       "outputs": [
@@ -2316,11 +2316,11 @@
         "  print(f'el promedio del estudiante {e} de las notas es: {(nota_1 + nota_2)/2}')"
       ],
       "metadata": {
-        "id": "TpCY62as-EtH",
-        "outputId": "5d10b52c-112b-42db-a442-5a3dc90379d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TpCY62as-EtH",
+        "outputId": "5d10b52c-112b-42db-a442-5a3dc90379d2"
       },
       "execution_count": 2,
       "outputs": [
@@ -2413,10 +2413,10 @@
       ],
       "metadata": {
         "id": "DO2ubP9N9D_2",
-        "outputId": "47b7c16b-ed78-435a-88ea-28e70e6bbc55",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "47b7c16b-ed78-435a-88ea-28e70e6bbc55"
       },
       "execution_count": 9,
       "outputs": [
@@ -2468,10 +2468,10 @@
       ],
       "metadata": {
         "id": "M8lH0I2288Ph",
-        "outputId": "f2f7deda-f35d-48e6-d0d2-a2b80d05d085",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f2f7deda-f35d-48e6-d0d2-a2b80d05d085"
       },
       "execution_count": 12,
       "outputs": [
@@ -2503,10 +2503,10 @@
       ],
       "metadata": {
         "id": "rBx4Yu1786Sy",
-        "outputId": "d6db7909-c1c6-4260-d2b7-77d5a90fd4fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d6db7909-c1c6-4260-d2b7-77d5a90fd4fd"
       },
       "execution_count": 13,
       "outputs": [
@@ -2538,10 +2538,10 @@
       ],
       "metadata": {
         "id": "bVPoZg668z3T",
-        "outputId": "3d784f0f-4c7c-4b4b-bc58-64c7276d4c08",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3d784f0f-4c7c-4b4b-bc58-64c7276d4c08"
       },
       "execution_count": 15,
       "outputs": [
@@ -2565,10 +2565,10 @@
       ],
       "metadata": {
         "id": "Jo_PBQ0g8z7D",
-        "outputId": "4a774997-95c6-47a3-f9c4-2eaada9b72da",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4a774997-95c6-47a3-f9c4-2eaada9b72da"
       },
       "execution_count": 19,
       "outputs": [
@@ -2611,11 +2611,11 @@
         "lista"
       ],
       "metadata": {
-        "id": "ih2NRiDbEQ2x",
-        "outputId": "4ebeb6a2-2e37-40d7-a75a-aa8194a642a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ih2NRiDbEQ2x",
+        "outputId": "4ebeb6a2-2e37-40d7-a75a-aa8194a642a1"
       },
       "execution_count": 21,
       "outputs": [
@@ -2638,11 +2638,11 @@
         "promedio"
       ],
       "metadata": {
-        "id": "EcNwEsiQElbG",
-        "outputId": "25945d15-58c0-4d4c-b76e-34c8d659f953",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EcNwEsiQElbG",
+        "outputId": "25945d15-58c0-4d4c-b76e-34c8d659f953"
       },
       "execution_count": 24,
       "outputs": [
@@ -2687,10 +2687,10 @@
       ],
       "metadata": {
         "id": "6q1Tmm7P8wQf",
-        "outputId": "effbd26f-0c53-43dd-82dd-202118f9eb25",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "effbd26f-0c53-43dd-82dd-202118f9eb25"
       },
       "execution_count": 25,
       "outputs": [
@@ -2724,10 +2724,10 @@
       ],
       "metadata": {
         "id": "NctvJTTU8uV9",
-        "outputId": "fc93de35-a78b-4b69-862c-61ac6d634be3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fc93de35-a78b-4b69-862c-61ac6d634be3"
       },
       "execution_count": 26,
       "outputs": [
@@ -2750,10 +2750,10 @@
       ],
       "metadata": {
         "id": "bQZUwldj8uY2",
-        "outputId": "6832be7c-2b6f-4392-e851-c1d6af79c5c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6832be7c-2b6f-4392-e851-c1d6af79c5c9"
       },
       "execution_count": 27,
       "outputs": [
@@ -2775,11 +2775,11 @@
         "lista[3:]"
       ],
       "metadata": {
-        "id": "jM5Y22nEH2Gd",
-        "outputId": "660bd393-c80d-44c8-aa3e-df21af82cb23",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jM5Y22nEH2Gd",
+        "outputId": "660bd393-c80d-44c8-aa3e-df21af82cb23"
       },
       "execution_count": 28,
       "outputs": [
@@ -2801,11 +2801,11 @@
         "lista[:]"
       ],
       "metadata": {
-        "id": "tLkHAmexICUN",
-        "outputId": "cd3c0dc7-9b72-4301-d83c-94283f657b07",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tLkHAmexICUN",
+        "outputId": "cd3c0dc7-9b72-4301-d83c-94283f657b07"
       },
       "execution_count": 29,
       "outputs": [
@@ -2850,10 +2850,10 @@
       ],
       "metadata": {
         "id": "RM894r2M8sse",
-        "outputId": "0d27fb5b-f703-4f4f-eb0d-30aebab6b3c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0d27fb5b-f703-4f4f-eb0d-30aebab6b3c6"
       },
       "execution_count": 31,
       "outputs": [
@@ -2900,10 +2900,10 @@
       ],
       "metadata": {
         "id": "NnoKkoWb8rTQ",
-        "outputId": "d7860e31-2409-494f-c369-2e106d427688",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d7860e31-2409-494f-c369-2e106d427688"
       },
       "execution_count": 36,
       "outputs": [
@@ -2946,10 +2946,10 @@
       ],
       "metadata": {
         "id": "tsKK5Ne58pvN",
-        "outputId": "ca7f76db-7cbd-4d48-ee42-5945a41e3b65",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ca7f76db-7cbd-4d48-ee42-5945a41e3b65"
       },
       "execution_count": 45,
       "outputs": [
@@ -3022,10 +3022,10 @@
       ],
       "metadata": {
         "id": "NDHhzooE8ld5",
-        "outputId": "94573741-17b9-4a11-cc20-45f3a14c9bbb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "94573741-17b9-4a11-cc20-45f3a14c9bbb"
       },
       "execution_count": 51,
       "outputs": [
@@ -3048,10 +3048,10 @@
       ],
       "metadata": {
         "id": "AVOzqzy-8lhh",
-        "outputId": "8c6c0519-acc9-44b7-b27f-1416b6347e70",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8c6c0519-acc9-44b7-b27f-1416b6347e70"
       },
       "execution_count": 52,
       "outputs": [
@@ -3095,10 +3095,10 @@
       ],
       "metadata": {
         "id": "0lfOu_c38jED",
-        "outputId": "d656016b-45c2-4bfb-9c0f-b1dd8b9d69bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d656016b-45c2-4bfb-9c0f-b1dd8b9d69bc"
       },
       "execution_count": 53,
       "outputs": [
@@ -3124,10 +3124,10 @@
       ],
       "metadata": {
         "id": "XIuqpTTy8jHV",
-        "outputId": "dad6207f-c285-4127-a5c1-e93b54fceb9e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dad6207f-c285-4127-a5c1-e93b54fceb9e"
       },
       "execution_count": 54,
       "outputs": [
@@ -3149,12 +3149,12 @@
         "estudiante[\"grupo\"]"
       ],
       "metadata": {
-        "id": "6OHa_O0YOaJQ",
-        "outputId": "7414d68a-56f0-4ef1-e888-1948e662cbdc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "6OHa_O0YOaJQ",
+        "outputId": "7414d68a-56f0-4ef1-e888-1948e662cbdc"
       },
       "execution_count": 55,
       "outputs": [
@@ -3200,10 +3200,10 @@
       ],
       "metadata": {
         "id": "DnfH_qHi8f17",
-        "outputId": "9f0987f7-2c25-48e5-fa7a-a5af4b08c2b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9f0987f7-2c25-48e5-fa7a-a5af4b08c2b7"
       },
       "execution_count": 62,
       "outputs": [
@@ -3252,10 +3252,10 @@
       ],
       "metadata": {
         "id": "olDIavsm8d_o",
-        "outputId": "b9539c3e-7123-44c0-8091-ae09f1532bbf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b9539c3e-7123-44c0-8091-ae09f1532bbf"
       },
       "execution_count": 64,
       "outputs": [
@@ -3312,11 +3312,11 @@
       ],
       "metadata": {
         "id": "ZsSCZx6G8b-T",
-        "outputId": "bc78cd1c-abfa-4ed2-8add-c60584ffd357",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "outputId": "bc78cd1c-abfa-4ed2-8add-c60584ffd357"
       },
       "execution_count": 65,
       "outputs": [
@@ -3361,10 +3361,10 @@
       ],
       "metadata": {
         "id": "ncdycLV08an7",
-        "outputId": "f9f4c33d-3185-4fd8-8183-41cf006e0caa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f9f4c33d-3185-4fd8-8183-41cf006e0caa"
       },
       "execution_count": 66,
       "outputs": [
@@ -3397,10 +3397,10 @@
       ],
       "metadata": {
         "id": "eZo0biaM8ZVs",
-        "outputId": "bf96e797-efb1-42e1-dfc7-24805683e650",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bf96e797-efb1-42e1-dfc7-24805683e650"
       },
       "execution_count": 67,
       "outputs": [
@@ -3433,10 +3433,10 @@
       ],
       "metadata": {
         "id": "-NxRT9C18Yvo",
-        "outputId": "d10ce5c9-351f-4c4a-e896-438ef35f72f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d10ce5c9-351f-4c4a-e896-438ef35f72f4"
       },
       "execution_count": 68,
       "outputs": [
@@ -3465,16 +3465,16 @@
       "cell_type": "code",
       "source": [
         "for llave in estudiante.keys():\n",
-        "  print(llave,)"
+        "  print(llave)"
       ],
       "metadata": {
         "id": "NYcjU-Ip8Xan",
-        "outputId": "c7d7921d-4355-4b59-d123-e9c66cfd8f89",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b1f642a6-7d4a-4a0d-ea0d-e3e266456382"
       },
-      "execution_count": 75,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "stream",
@@ -3491,26 +3491,26 @@
     {
       "cell_type": "code",
       "source": [
-        "for llave,valor in estudiante.items():\n",
-        "  print(llave,\"-->, valor\")"
+        "for llave, valor in estudiante.items():\n",
+        "  print(llave, \"-->\", valor)"
       ],
       "metadata": {
         "id": "aAnpP1Wv8XfJ",
-        "outputId": "d92d150d-a616-45fb-c825-39d64bf7f319",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "07c4f94b-6928-49b1-8b94-2ec38f618505"
       },
-      "execution_count": 76,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "matricula -->, valor\n",
-            "dia_registro -->, valor\n",
-            "mes_registro -->, valor\n",
-            "modalidad -->, valor\n"
+            "matricula --> 2000168933\n",
+            "dia_registro --> 25\n",
+            "mes_registro --> 10\n",
+            "modalidad --> EAD\n"
           ]
         }
       ]
